--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "html-webpack-plugin": "^2.28.0",
     "json-loader": "^0.5.4",
     "svg-inline-loader": "^0.7.1",
-    "webpack": "^2.2.1"
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.3.0"
+  },
+  "scripts": {
+    "webpack:dev": "webpack-dev-server --config ./config/webpack.config.dev.babel.js --env=developement",
+    "dev": "npm run webpack:dev"
   }
 }
