--- a/package.json
+++ b/package.json
@@ -3,15 +3,22 @@
   "version": "1.0.0",
   "description": "Preact minimal structure",
   "main": "index.js",
-  "repository": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/aganglada/preact-seed.git"
+  },
   "author": "Alejandro Garcia Anglada <aganglada@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "preact": "^7.2.0"
+    "preact": "^7.2.0",
+    "preact-router": "^2.4.1"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
+    "babel-plugin-transform-react-jsx": "^6.22.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
     "html-webpack-plugin": "^2.28.0",
     "json-loader": "^0.5.4",
     "svg-inline-loader": "^0.7.1",
