--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   },
   "scripts": {
     "webpack:dev": "webpack-dev-server --config ./config/webpack.config.dev.babel.js --env=developement",
-    "dev": "npm run webpack:dev"
+    "webpack:prod": "NODE_ENV=production webpack --config ./config/webpack.config.prod.babel.js --env=production",
+    "dev": "npm run webpack:dev",
+    "prod": "npm run webpack:prod"
   }
 }
