--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "babel-plugin-transform-react-jsx": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
+    "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "2.0.0",
     "html-webpack-plugin": "^2.28.0",
-    "json-loader": "^0.5.4",
+    "postcss-cssnext": "^2.9.0",
+    "postcss-loader": "^1.3.0",
+    "style-loader": "^0.13.1",
     "svg-inline-loader": "^0.7.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0"
