--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "2.0.0",
     "html-webpack-plugin": "^2.28.0",
+    "offline-plugin": "^4.6.1",
     "postcss-cssnext": "^2.9.0",
     "postcss-loader": "^1.3.0",
     "style-loader": "^0.13.1",
