--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "2.0.0",
     "html-webpack-plugin": "^2.28.0",
+    "http-server": "^0.9.0",
     "offline-plugin": "^4.6.1",
     "postcss-cssnext": "^2.9.0",
     "postcss-loader": "^1.3.0",
@@ -33,6 +34,7 @@
     "webpack:dev": "webpack-dev-server --config ./config/webpack.config.dev.babel.js --env=developement",
     "webpack:prod": "NODE_ENV=production webpack --config ./config/webpack.config.prod.babel.js --env=production",
     "dev": "npm run webpack:dev",
-    "prod": "npm run webpack:prod"
+    "prod": "npm run webpack:prod",
+    "start": "http-server assets/"
   }
 }
