--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "preact-minimal",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Preact minimal structure",
   "repository": {
     "type": "git",
@@ -9,34 +9,32 @@
   "author": "Alejandro Garcia Anglada <aganglada@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "preact": "^8.1.0",
-    "preact-router": "^2.4.1"
+    "preact": "^8.5.2",
+    "preact-router": "^2.6.1"
   },
   "devDependencies": {
-    "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-transform-react-jsx": "^6.22.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
-    "css-loader": "^0.26.1",
-    "extract-text-webpack-plugin": "2.0.0",
-    "html-webpack-plugin": "^2.28.0",
-    "http-server": "^0.9.0",
-    "offline-plugin": "^4.6.1",
-    "postcss-cssnext": "^2.9.0",
-    "postcss-loader": "^1.3.0",
-    "style-loader": "^0.13.1",
-    "svg-inline-loader": "^0.7.1",
-    "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.5.0"
+    "@babel/core": "^7.6.0",
+    "@babel/plugin-transform-react-jsx": "^7.3.0",
+    "@babel/preset-env": "^7.6.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.6.0",
+    "babel-loader": "^8.0.6",
+    "html-webpack-plugin": "^3.2.0",
+    "http-server": "^0.11.1",
+    "npm-run-all": "^4.1.5",
+    "offline-plugin": "^5.0.7",
+    "svg-inline-loader": "^0.8.0",
+    "webpack": "^4.40.2",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.1",
+    "webpack-merge": "^4.2.2"
   },
   "scripts": {
-    "copy:assets": "cp -r app/resources/ assets/",
-    "copy:manifest": "cp manifest.json assets/manifest.json",
+    "copy:public": "cp -r public/ build/",
     "webpack:dev": "webpack-dev-server --config ./config/webpack.config.dev.babel.js --env=developement",
     "webpack:prod": "NODE_ENV=production webpack --config ./config/webpack.config.prod.babel.js --env=production",
-    "dev": "npm run webpack:dev",
-    "prod": "npm run webpack:prod && npm run copy:assets && npm run copy:manifest",
-    "start": "http-server assets/"
+    "dev": "run-s copy:public webpack:dev",
+    "prod": "run-s copy:public webpack:prod",
+    "start": "http-server build/"
   }
 }
